1. upright sadly does not look good in palatino 2. move my special lucida style file out of the way 3. keep upright in lucida for variety.

--- a/yoneda-speedrun/yoneda-mac.tex
+++ b/yoneda-speedrun/yoneda-mac.tex
@@ -31,8 +31,6 @@
 
 % PACKAGES
 
-\usepackage{latexsym}
-\usepackage{amssymb,amsmath}
 \usepackage{bbm}
 \usepackage[cal=cm,scr=euler]{mathalpha}
 \usepackage{url}
@@ -74,5 +72,5 @@
 \def\pg{\bigskip\goodbreak\ni}
  \def\ni{\goodbreak\noindent}
 
-\newif\ifroman
-\romanfalse
+\newif\ifupright
+\uprightfalse
