--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -615,7 +615,7 @@ $\DD^\CC$.\\
 $\Nat(F, G)$ & The collection of natural transformations from $F$ to $G$. Also written
 $[\CC,\DD](F,G)$, or~$\shortNat(F,G)$ or just~$\Hom(F,G)$. \\
 $\Arrows(X, -)$ & The represented or ``arrow'' functor for $X$. Also called the ``hom''
-functor and written $\CC(X,-)$, $\h^X$, $\ihom_X$, or $\Hom(X,-)$. \\
+functor and written $\CC(X,-)$, $\h^X$, $\littleh^X$, $\ihom_X$, or $\Hom(X,-)$. \\
 $f \circ - $, $- \circ f$ & Pre- and post-composition maps. Also written $f_*$ and
 $f^*$.\\
 $\Yo$ & Yoneda Embedding.\\
