--- a/yoneda-speedrun/yoneda-speedrun-lucida.tex
+++ b/yoneda-speedrun/yoneda-speedrun-lucida.tex
@@ -30,7 +30,7 @@ menucolor=blue,linktocpage=true]{hyperref}
 \usepackage{tikz-cd}
 
 \input yoneda-mac
-\romantrue
+\uprighttrue
 \input yoneda-cats
 
 \input yoneda-main
