--- a/yoneda-speedrun/yoneda-speedrun-pal-upright.tex
+++ b/yoneda-speedrun/yoneda-speedrun-pal-upright.tex
@@ -17,6 +17,8 @@ linkcolor=blue,
 menucolor=blue,linktocpage=true]{hyperref}
 \hypersetup{bookmarksopen=true, bookmarksnumbered=true, bookmarksopenlevel=10}
 \usepackage[noBBpl,sc]{mathpazo}
+\usepackage[scale=.9]{tgheros}   %% Option 'sfdefault' only if
+%\usepackage[scaled]{FiraSans}
 \usepackage{eulervm}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
@@ -27,6 +29,7 @@ menucolor=blue,linktocpage=true]{hyperref}
 \usepackage{tikz-cd}
 
 \input yoneda-mac
+\uprighttrue
 \input yoneda-cats
 
 \input yoneda-main
