--- a/yoneda-speedrun/yoneda-mac.tex
+++ b/yoneda-speedrun/yoneda-mac.tex
@@ -1,10 +1,7 @@
-\input{../helpers/cmrsum}
-\input{../helpers/fix-underbrace.tex}
-
 % make sure there is enough TOC for reasonable pdf bookmarks.
 \setcounter{tocdepth}{3}
 
-\usepackage{amsthm}
+\usepackage{amsmath,amsthm}
 \theoremstyle{definition}
 
 \newtheorem{thm}{Theorem}[]
