--- a/yoneda-speedrun/yoneda-cats.tex
+++ b/yoneda-speedrun/yoneda-cats.tex
@@ -25,3 +25,7 @@
 \newcommand{\func}{\setName{Func}}
 \newcommand{\funct}{\setName{Funct}}
 \newcommand{\littleh}{{h}}
+\newcommand{\Set}{\fcat{Sets}}
+\newcommand{\gr}{\fcat{Group}}
+\newcommand{\mat}{\fcat{Matrix}}
+\newcommand{\mon}{\fcat{Monoid}}
