--- a/yoneda-speedrun/yoneda-speedrun-pal-ot.tex
+++ b/yoneda-speedrun/yoneda-speedrun-pal-ot.tex
@@ -1,9 +1,8 @@
 \documentclass[12pt]{article}
 
+\usepackage{newpxtext}
 \usepackage{mathtools}
 \usepackage{euler-math}
-
-\usepackage{amsthm}
 
 \usepackage[small]{titlesec}
 \usepackage{cite}
@@ -19,12 +18,7 @@ filecolor=blue,
 linkcolor=blue,
 menucolor=blue,linktocpage=true]{hyperref}
 \hypersetup{bookmarksopen=true, bookmarksnumbered=true, bookmarksopenlevel=10}
-\defaultfontfeatures{Scale=MatchLowercase}
-\setmainfont{TeX Gyre Pagella}[
-  Scale=1.0,
-  Ligatures={Common, Discretionary, TeX}]
 %\setsansfont{Optima}
-\setsansfont{Lucida Sans OT}
 %\setmathfont{Asana Math}
 %\usepackage[scale=.9]{tgheros}   %% Option 'sfdefault' only if
 %\usepackage[scaled]{FiraSans}
@@ -60,7 +54,7 @@ menucolor=blue,linktocpage=true]{hyperref}
   {\fillast} {\bfseries{\thesection }.} {1ex minus .1ex} {\bfseries}
   
 \titleformat{\subsection}[block]
-  {\fillast} {{\it \thesection }.} {1ex minus .1ex} {\it}
+  {\fillast} {{\itshape \thesection }.} {1ex minus .1ex} {\itshape}
 
 \titleformat*{\subsubsection}{\scshape}
 
@@ -101,7 +95,7 @@ menucolor=blue,linktocpage=true]{hyperref}
 
 \newcommand{\fto}{\Rightarrow}
 
-\let\setName=\mathsf
+\let\setName=\mathrm
 
 \newcommand{\cat}[1]{\mathbf{#1}}      % Arbitrary category
 \newcommand{\scat}[1]{{\mathbf {#1}}}     % Arbitrary small category
