long \to arrows

--- a/yoneda-speedrun/yoneda-mac.tex
+++ b/yoneda-speedrun/yoneda-mac.tex
@@ -60,6 +60,7 @@
 \newcommand{\Yo}{\mathop{Y\!o}}
 
 \newcommand{\fto}{\Rightarrow}
+\renewcommand{\to}{\longrightarrow}
 
 \def\pg{\bigskip\goodbreak\ni}
 \def\ni{\goodbreak\noindent}
