--- a/yoneda-speedrun/yoneda-cats.tex
+++ b/yoneda-speedrun/yoneda-cats.tex
@@ -9,9 +9,9 @@
 \newcommand{\fcat}[1]{{\mathbf {#1}}}    % Typeface for fixed categories
 \newcommand{\id}{\mathrm{id}} % identity
 \newcommand{\CC}{\cat{C}} 
-\newcommand{\CCop}{\cat{C}^{\mathrm op}}
+\newcommand{\CCop}{\cat{C}^{\mathrm{op}}}
 \newcommand{\DD}{\cat{D}}
-\newcommand{\DDop}{\cat{D}^{\mathrm op}}
+\newcommand{\DDop}{\cat{D}^{\mathrm{op}}}
 \DeclareMathOperator{\Arrows}{\setName{Arrows}}
 \DeclareMathOperator{\Objects}{\setName{Objects}}
  \DeclareMathOperator{\Hom}{\setName{Hom}}
