--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -509,10 +509,13 @@ Finally, Peter Johnstone \cite{Johnstone} has my favorite, relatively concrete s
 
 \begin{lemma}[Yoneda]\label{yoneda-johnstone} Let $\CC$ be a locally small category, let
 $X$ be an object of $\CC$ and let $F:\CC \to \Set$ be a functor. Then
+\begin{enumerate}
+\item[(i)]  there is a bijection between natural transformations $\CC(X, -) \fto F$ and the 
+elements of $FX$; and
 
-(i)  there is a bijection between natural transformations $\CC(X, -) \fto F$
+\item[(ii)] the bijection in (i) is natural in both $F$ and $X$.
+\end{enumerate}
 
-(ii) the bijection in (i) is natural in both $F$ and $X$.
 \end{lemma}
 
 \section{One More Thing}
