--- a/helpers/psu-mac.tex
+++ b/helpers/psu-mac.tex
@@ -102,3 +102,51 @@
 \newcommand{\gr}{\fcat{Group}}
 \newcommand{\mat}{\fcat{Matrix}}
 \newcommand{\mon}{\fcat{Monoid}}
+
+%%% other things. some of these clobber things above
+\date{}
+\def\mm{\Vdash}
+\def\to{\longrightarrow}
+\def\mto{\longmapsto}
+\def\imp{\rightarrow}
+\def\iff{\leftrightarrow}
+\def\union{\cup}
+\def\inc{\subseteq}
+\def\dom{\mathop{\mathrm{dom}}}
+\def\cod{\mathop{\mathrm{cod}}}
+\def\id{{\mathrm 1}}
+\def\res{\!\upharpoonleft\!}
+\def\ffam{\varphi}
+\def\comp{\circ}
+\def\bbone{\mathbb 1}
+\def\zeromap{0}
+\def\bbzero{{\mathbb O}}
+\def\ccc{{c.c.c.}}
+\def\ev{\varepsilon}
+\def\ebc{\varepsilon_{BC}}
+\def\L{\Lambda}
+\def\l{\lambda}
+\def\lm#1.#2{\lambda#1.\, #2}
+\def\br#1{[\, #1 \, ]}
+\def\V{V}
+\def\U{U}
+\def\D{D}
+\def\C{\mathcal C}
+\def\S{\mathcal S}
+\def\lxy{\l x\, \l y . \,}
+\def\lmm#1#2.#3{\l #1\, \l #2 . \, #3}
+\def\sss{(*\!*\!*)}
+\def\ss{(**)}
+\def\ssn{(**_n)}
+\def\scop{\S^{\C^{op}}}
+\def\PU{\mathcal P U}
+\def\P{\mathcal P}
+\def\UU{(U\to U)}
+\def\BA{B \to A}
+\def\AB{A \to B}
+\def\bCC{\mathbb C}
+\def\RR{\mathbb R}
+\def\ZZ{\mathbb Z}
+\def\FF{\mathbb F}
+\def\NN{\mathbb N}
+
