--- a/yoneda-speedrun/yoneda-speedrun-lucida.tex
+++ b/yoneda-speedrun/yoneda-speedrun-lucida.tex
@@ -18,8 +18,9 @@ menucolor=blue,linktocpage=true]{hyperref}
 \hypersetup{bookmarksopen=true, bookmarksnumbered=true, bookmarksopenlevel=10}
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
-\usepackage[altbullet]{lucidabr}
+\usepackage[altbullet]{../helpers/lucida-for-euler}
 \usepackage{eulervm}
+
 \linespread{1.05}
 
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
