clarify symbols for the embedding

--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -523,7 +523,8 @@ elements of $FX$; and
 Now your reward for having climbed all the way up this abstraction ladder with me is yet
 another abstraction!
 
-Suppose you are given an object $Y$ and you apply the Yoneda lemma by substituting
+Suppose we have $\CC$ and $X$ as given in the statement of the lemma, and then we are given another object $Y \in \CC$. 
+We can apply the lemma by substituting
 $\Arrows(Y,-)$ for the functor $F$. Then
 $$
 \Nat(\Arrows(X, -),\Arrows(Y,-)) \iso \Arrows(Y,-)(X) = \Arrows(Y,X)
