--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -1,4 +1,4 @@
-%!TEX root = yoneda-speedrun-pal.tex
+%!TEX root = yoneda-speedrun-pal-eu.tex
 % these include amsmath and that can cause trouble in older docs.
 
 \usepackage{microtype}
