--- a/1912.10642v6/ct-notes-new-eu.tex
+++ b/1912.10642v6/ct-notes-new-eu.tex
@@ -3076,7 +3076,7 @@ In many of the examples in the section above, the given functors are actually of
 \end{deph}
 
 Here is a way to interpret representable functors and representable presheaves. 
-A representable functor $\Hom_\cat{C}(S,-):\cat{C}\to\Set$ takes an objects $X$ of $\cat{C}$ and gives the set $\Hom_\cat{C}(S,X)$ of arrows from $S$ to $X$. Intuitively, the features that it extracts from $X$ are exactly all the possible ways of mapping $S$ into $X$, as if $S$ were a sort of \emph{probe} that we use to explore the structure of $X$.
+A representable functor $\Hom_\cat{C}(S,-):\cat{C}\to\Set$ takes an object $X$ of $\cat{C}$ and gives the set $\Hom_\cat{C}(S,X)$ of arrows from $S$ to $X$. Intuitively, the features that it extracts from $X$ are exactly all the possible ways of mapping $S$ into $X$, as if $S$ were a sort of \emph{probe} that we use to explore the structure of $X$.
 
 Dually, a representable presheaf $\Hom_\cat{C}(-,S):\cat{C}^\op\to\Set$ takes an objects $X$ of $\cat{C}$ and gives the set $\Hom_\cat{C}(X,S)$ of arrows from $X$ to $S$. Intuitively, the features that it extracts from $X$ are all the possible ways of mapping $X$ to $S$, or all the possible \emph{observations} of $X$ with values in $S$ (think of $S$ as a ``screen'' onto which $X$ can be projected in many possible ways). 
 
