--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -134,7 +134,7 @@ Finally, one more notion that we'll need later is the idea of an {\it isomorphis
 
 \begin{defn}
 An arrow $f: X \to Y$ in a category $\CC$ is an {\it isomorphism} if there exists an arrow
-$g: B \to A$ such that $gf = 1_X$ and $fg = 1_Y$. We say that the objects $X$ and $Y$ are
+$g: Y \to X$ such that $gf = 1_X$ and $fg = 1_Y$. We say that the objects $X$ and $Y$ are
 {\it isomorphic} to each other whenever there exists an isomorphism between them. If two
 objects in a category are isomorphic to each other we write $X \iso Y$.
 \end{defn}
