--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -310,7 +310,7 @@ using the following assignments:
 \item A mapping from $\CC \to \Set$ that assigns to each $Y \in \Objects(\CC)$ the set
 $\Arrows(X,Y)$
 \item A mapping from $\Arrows(\CC) \to \Arrows(\Set) $ that assigns to each arrow $f: A
-\to B$ to a mapping $f_*$ defined by $f_*(g) = f\circ g$ for each arrow $g: X \to A$.
+\to B$ a mapping $f_*$ defined by $f_*(g) = f\circ g$ where $g$ is an arrow from $X$ to $A$.
 \end{itemize}
 \end{defn}
 \noindent
