--- a/2309.15163/main.tex
+++ b/2309.15163/main.tex
@@ -110,6 +110,9 @@ bookmarksopenlevel=10
   \addtocounter{footnote}{-1}%
   \endgroup
 }
+
+\def\arraystretch{1.25}
+
 \begin{document}
 	
 	\begin{titlepage}
@@ -363,7 +366,7 @@ bookmarksopenlevel=10
    \subsubsection{Dipole Antenna}
     An antenna element should be placed in the focal spot of the wok reflector to convert EM waves into electric current. A dipole antenna is one of the simplest and most widely used types of antennas which gives an omnidirectional radiation pattern to illuminate our deep wok. Since the dipole antenna is not sensitive to the axial direction, the illumination on the wok will be around $70\%$. 
 
-    We build our dipole antenna on $2$ mm copper wires, which are strong enough to support itself from bending. 
+    We build our dipole antenna on $2$ mm copper wires, which are strong enough to support itself from bending.% 
     \footnote{Copper wire can also be found in kitchenware, for example by desembling from microwave oven.} 
     Ideally, each arm of the dipole antenna should have a length of $\lambda/4 = 52.75$ mm $\approx 53$ mm, with an infinitesimal gap between two arms, so the overall length equals $\lambda/2$. Practically, the gap needs to be large enough for soldering and avoid shorting, so the arm length will be slightly shortened; furthermore, we will fine-tune the arm length to provide the best sensitivity and impedance matching with the wok reflector. 
     The finally adopted design parameter is shown in Table.~\ref{tab: antenna-specification}.
@@ -703,6 +706,10 @@ bookmarksopenlevel=10
     
     \subsection{Astronomical Interpretation}
     \subsubsection{Recession Velocity}
+    
+    However, we must address the complication that the emission line has its intrinsic width. Instead of modeling the shape of the emission line and carefully disentangling the broadening effect from the instrument response and intrinsic width, we choose to attribute the broadening effect as the uncertainty in determining the peak location. We measure the full width half maximum (FWHM) of the 21 cm emission and report the inferred recession velocities of each pointing in Table~\ref{tab: recession-velocity}.
+
+
     \begin{table}
     \centering
     \begin{tabular}{c|c|c}
@@ -731,9 +738,7 @@ bookmarksopenlevel=10
     \end{equation}
     where $c$ is the speed of light. 
     
-    However, we must address the complication that the emission line has its intrinsic width. Instead of modeling the shape of the emission line and carefully disentangling the broadening effect from the instrument response and intrinsic width, we choose to attribute the broadening effect as the uncertainty in determining the peak location. We measure the full width half maximum (FWHM) of the 21 cm emission and report the inferred recession velocities of each pointing in Table~\ref{tab: recession-velocity}.
-
-    One should exercise caution when interpreting the error bars associated with the reported values. We acknowledge that part of the error bars are systematic as we use a line (equivalently a Dirac-Delta) to model the emission. Furthermore, a particular pointing can pass through multiple spiral arms of the Milky Way, and the neutral hydrogen along each arm has a different intrinsic velocity. This effect can be observed particularly in the Sagittarius pointing, where the width of the emission is substantially larger than the remaining pointings. In fact, upon comparison with other independent measurements in the same region, multiple unresolved spiral arms along that direction are evident, resulting in the intrinsic width being much smaller than the error bar we report here.
+        One should exercise caution when interpreting the error bars associated with the reported values. We acknowledge that part of the error bars are systematic as we use a line (equivalently a Dirac-Delta) to model the emission. Furthermore, a particular pointing can pass through multiple spiral arms of the Milky Way, and the neutral hydrogen along each arm has a different intrinsic velocity. This effect can be observed particularly in the Sagittarius pointing, where the width of the emission is substantially larger than the remaining pointings. In fact, upon comparison with other independent measurements in the same region, multiple unresolved spiral arms along that direction are evident, resulting in the intrinsic width being much smaller than the error bar we report here.
     
     The aforementioned degeneracies among the broadening effects can be resolved with a more sophisticated error model. However, considering the quality of the data, the degeneracies in the model parameters could not be resolved, and Bayesian marginalization would be required to derive useful constraints on recession velocity. In this work, we have adopted the simplest method as outlined above.
 
