--- a/2309.15163/main.tex
+++ b/2309.15163/main.tex
@@ -282,7 +282,7 @@ bookmarksopenlevel=10
     In principle, upon significant improvement of the system's noise figure, the system can be used to probe extragalactic $21$ cm emission.
     Such observation would also require a narrow beam to better avoid the galactic foreground.
     Considering the universe is made up of $\gtrsim 70 \%$ hydrogen, accurate survey of the distribution of hydrogen in the universe would provide valuable information about cosmology. 
-    Extragalactic $21$ cm tomography 
+    Extragalactic $21$ cm tomography%
     \footnote{Note that most $21$ cm tomography experiments are performed using radio interferometer, instead of single dish radio telescope as we implemented here. The use of interferometer not only increases the effective aperture of the telescope, but also allow higher resolution for constraining the small scale fluctuations of $21$ cm intensity.} 
     is currently one of the standard approach to study the matter distribution in the universe on the large scales $\mathbf{r} \sim 100$ Mpc. 
     There are several research-class radio experiments targeting the $21$ cm emission from the early universe \cite{chime-overview,chime-21cm-result}.
@@ -508,7 +508,7 @@ bookmarksopenlevel=10
     The noise floor is suppressed by more than $30$ dB after using this proper shielding design.
     
     \subsubsection{Temporary Mounting}
-    Measuring the faint signal from galactic neutral hydrogen requires a long exposure time. Additionally, if the reflector system comes into contact with other charged materials, extra noise can be induced. 
+    Measuring the faint signal from galactic neutral hydrogen requires a long exposure time. Additionally, if the reflector system comes into contact with other charged materials, extra noise can be induced.% 
     \footnote{We have verified that manually holding the wok increases the band-integrated power received by the system by approximately 10 dB, which in turn raises the noise floor by +10 dB.}
     These concerns emphasize the importance of using a proper holder to mount the system.
 
