picture of arrows(X,-)

--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -307,21 +307,40 @@ $$
 $$
 using the following assignments:
 \begin{itemize}
-\item A mapping from $\CC \to \Set$ that assigns to each $Y \in \Objects(\CC)$ the set
-$\Arrows(X,Y)$
+\item A mapping from $\CC \to \Set$ that assigns to each $A \in \Objects(\CC)$ the set
+$\Arrows(X,A)$
 \item A mapping from $\Arrows(\CC) \to \Arrows(\Set) $ that assigns to each arrow $f: A
 \to B$ a mapping $f_*$ defined by $f_*(g) = f\circ g$ where $g$ is an arrow from $X$ to $A$.
 \end{itemize}
 \end{defn}
 \noindent
-The notation $\Arrows(X,-)$ needs a bit of explanation. Here the idea is that we have
+Here is a good picture of what is going on  \cite{Riehl2016}:%
+\footnote{Added this in 2023 because I did not notice it before. Sigh.}
+\[
+\begin{tikzpicture}[commutative diagrams/every diagram]
+\matrix[matrix of math nodes, name=m, commutative diagrams/every cell,row sep=.4em, column sep=1em] {
+\CC & & \Set\\
+A & \mapsto &  \Arrows(X,A)\\ 
+& \mapsto & \\
+B & \mapsto & \Arrows(X,B)\\};
+\path[commutative diagrams/.cd, every arrow, every label]
+(m-1-1) edge node {$\Arrows(X,-)$}  (m-1-3)
+(m-2-1) edge node[swap] {$f$} (m-4-1)
+(m-2-3) edge node {$f_*$}(m-4-3);
+\end{tikzpicture}
+\]
+\noindent
+Check over this picture in your head, and note that there are {\it two} mappings,
+and two different kinds of placeholders: one for objects and one for arrows.
+
+The notation $\Arrows(X,-)$ is a bit strange. The idea is that we have
 defined a mapping with two arguments, but then fixed the object $X$. Then we use the
-``$-$'' symbol as a placeholder for the second argument. So $\Arrows(X,Y)$ is the value of
-the mapping as we vary the second argument through all the other objects in $\CC$. This is
-a bit of an abuse of notation since we are apparently using the symbol $\Arrows$ to mean
+``$-$'' symbol as a placeholder for the second argument. So $\Arrows(X,-)$ operates on
+all the other objects in $\CC$, named by the dummy variable $A$. This is
+a bit of an abuse of notation since we are apparently using the symbol ``$\Arrows$'' to mean
 two different things (one is a set, the other a functor). Oh well.
 
-The definition of the mapping for arrows also needs a bit of explanation. Given $A,B \in
+The definition of the mapping for arrows works the same way. Given $A,B \in
 \CC$ and an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ applied to $f$
 is an arrow that maps $\Arrows(X,A) \to \Arrows(X,B)$. We will call this arrow $f_*$. If
 $g: X \to A$ is in $\Arrows(X,A)$ then the value that we want for $f_*$ at $g$ is $f_*(g)
@@ -329,19 +348,10 @@ $g: X \to A$ is in $\Arrows(X,A)$ then the value that we want for $f_*$ at $g$ i
 since we apply $f$ {\it after} $g$. You also see it written as $f \circ -$. The {\it
 pre-composition} map is then $f^*$ or $- \circ f$.
 
-Thus, we have worked out that the value of $\Arrows(X,-)$ at $f$ should be the arrow $f
-\circ -$. Sometimes you will see this written $\Arrows(X, f) = f \circ -$, which I find a
-bit odd because now we are overloading the kinds of things that can go into the ``$-$''
-slot.
-
-Check over this formula in your head, and note that there are {\it two} function
-applications (one for the functor, and one inside that for the post-composition arrow),
-and two different kinds of placeholders.
-
 Other notations for this functor include $\Hom(X, -)$, $\Hom_\CC(X, -)$, $\h^X$, ${\littleh}^X$, and
 just plain $\CC(X,-)$. In my notation we should have written this as $\Arrows_{\CC}(X,
 -)$, but I'm lazy. This kind of functor is also called a {\it hom-functor}.
-
+\goodbreak
 Finally, we can give two more important definitions.
 \begin{defn}
 \label{represented}
@@ -389,9 +399,8 @@ functor $F: \CCop \to \DD$ where:
 \item We have an object $F(X) \in \Objects(\DD)$ for each $X \in \objc$.
 \item For each arrow $f : X \to Y \in \Arrows(\CC)$ we have an arrow $F(f): FY \to FX$ in $\Arrows(\DD)$.
 \end{itemize}
-\goodbreak
 \noindent
-In addition
+In addition:
 \begin{itemize}
 \item For any two arrows $f, g \in \Arrows(\CC)$ where $g \circ f$ is defined we have
 $F(f) \circ F(g) = F(g \circ f)$.
@@ -503,8 +512,7 @@ Here he writes $\Hom_\CC$ for $\Arrows_\CC$ and $\Hom_{[\cat{C}^\op,\Set]}$ to m
 arrows in the functor category $[\cat{C}^\op,\Set]$, which are the natural
 transformations.
 
-\bigskip
-\noindent
+\pg
 Finally, Peter Johnstone \cite{Johnstone} has my favorite, relatively concrete statement:
 
 \begin{lemma}[Yoneda]\label{yoneda-johnstone} Let $\CC$ be a locally small category, let
