--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -8,7 +8,7 @@
 
 \title{\Large A Yoneda Speedrun}
 \author{\large Pete Su}
-\date{\normalsize 2021-10-30 \\ {\footnotesize (Updated 2023-09-22)}}
+\date{\normalsize 2021-10-30 \\ {\footnotesize (Updated 2023-10-02)}}
 
 \maketitle
 
@@ -340,7 +340,7 @@ all the other objects in $\CC$, named by the dummy variable $A$. This is
 a bit of an abuse of notation since we are apparently using the symbol ``$\Arrows$'' to mean
 two different things (one is a set, the other a functor). Oh well.
 
-The definition of the mapping for arrows works the same way. Given $A,B \in
+The mapping for the arrows works the same way. Given $A,B \in
 \CC$ and an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ applied to $f$
 is an arrow that maps $\Arrows(X,A) \to \Arrows(X,B)$. We will call this arrow $f_*$. If
 $g: X \to A$ is in $\Arrows(X,A)$ then the value that we want for $f_*$ at $g$ is $f_*(g)
