--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -316,7 +316,7 @@ $\Arrows(X,A)$
 \noindent
 Here is a good picture of what is going on  \cite{Riehl2016}:%
 \footnote{Added this in 2023 because I did not notice it before. Sigh.}
-\[
+\begin{center}
 \begin{tikzpicture}[commutative diagrams/every diagram]
 \matrix[matrix of math nodes, name=m, commutative diagrams/every cell,row sep=.4em, column sep=1em] {
 \CC & & \Set\\
@@ -328,7 +328,8 @@ B & \mapsto & \Arrows(X,B)\\};
 (m-2-1) edge node[swap] {$f$} (m-4-1)
 (m-2-3) edge node {$f_*$}(m-4-3);
 \end{tikzpicture}
-\]
+\end{center}
+\vskip-.5em
 \noindent
 Check over this picture in your head, and note that there are {\it two} mappings,
 and two different kinds of placeholders: one for objects and one for arrows.
