--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -313,7 +313,7 @@ $\Arrows(X,A)$
 \to B$ a mapping $f_*$ defined by $f_*(g) = f\circ g$ where $g$ is an arrow from $X$ to $A$.
 \end{itemize}
 \end{defn}
-\noindent
+\goodbreak\noindent
 Here is a good picture of what is going on  \cite{Riehl2016}:%
 \footnote{Added this in 2023 because I did not notice it before. Sigh.}
 \begin{center}
