--- a/yoneda-speedrun/yoneda-speedrun-ch-eu.tex
+++ b/yoneda-speedrun/yoneda-speedrun-ch-eu.tex
@@ -7,7 +7,7 @@
 \usepackage{tabularx}
 
 \usepackage[full]{textcomp}
-\usepackage[osf]{XCharter}% lining figures in math, osf in text
+\usepackage[osf,proportional]{XCharter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 %\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 \usepackage{eulervm}
