--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -127,8 +127,8 @@ A category $\CC$ is called {\it small} if $\Arrows(\CC)$ is a set.
 A category $\CC$ is called {\it locally small} if $\Arrows_{\CC}(A,B)$ is a set for every
 $A, B \in \CC$. \end{defn}%
 \noindent
-For the rest of this note we will only deal with locally small categories, since in the
-setup for the lemma, we are given a category $\CC$ that is locally small.
+For the rest of this note we will only deal with locally small categories because in the
+setup for the lemma we are given a category $\CC$ that is locally small.
 
 Finally, one more notion that we'll need later is the idea of an {\it isomorphism}.
 
