--- a/2103.16623/main.tex
+++ b/2103.16623/main.tex
@@ -21,7 +21,7 @@
 
 %
 % \documentclass[epjc3]{svjour3}  
-\documentclass[twocolumn,epjc3]{svjour3}\sloppy  
+\documentclass[12pt,epjc3]{svjour3}\sloppy  
 
 %
 \smartqed  % flush right qed marks, e.g. at end of proof
@@ -34,7 +34,54 @@
 \usepackage{bm}
 \usepackage{cuted}
 \usepackage{lineno}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={5.7in, 8.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
 \usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 %
 % \RequirePackage{mathptmx}      % use Times fonts if available on your TeX system
 %
@@ -92,7 +139,10 @@ These highly-Lorentz contracted fields can manifest themselves as linearly polar
 \end{abstract}
 
 \setcounter{tocdepth}{3}
+\newpage
 \tableofcontents
+\newpage
+
 %
 % Computer program descriptions must contain the following
 % PROGRAM SUMMARY AND SPECIFICATIONS.
