--- a/1612.09375-12/BasicCategoryTheory-Charter-euler.tex
+++ b/1612.09375-12/BasicCategoryTheory-Charter-euler.tex
@@ -10,7 +10,7 @@
 \usepackage{amssymb}
 
 \usepackage[full]{textcomp}
-\usepackage[osf]{XCharter}% lining figures in math, osf in text
+\usepackage[osf,proportional]{XCharter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 %\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 \usepackage{eulervm}
