--- a/1612.09375-12/lims.tex
+++ b/1612.09375-12/lims.tex
@@ -208,9 +208,9 @@ time parameter.
 
 A closely related statement is that the product topology is the smallest
 topology on $X \times Y$ for which the projections are continuous.  Here
-`smallest' means that for any other topology $\mathcal{T}$ on $X \times Y$
+`smallest' means that for any other topology $\mathscr{T}$ on $X \times Y$
 such that $p_1$ and $p_2$ are continuous, every subset of $X \times Y$ open
-in the product topology is also open in $\mathcal{T}$.  Thus, to define the
+in the product topology is also open in $\mathscr{T}$.  Thus, to define the
 product topology, we declare just enough sets to be open that the
 projections are continuous.
 \end{example}
