--- a/2311.00007/formal_turn_arxiv.tex
+++ b/2311.00007/formal_turn_arxiv.tex
@@ -12,7 +12,7 @@
 \input{../helpers/fix-underbrace.tex}
 
 \usepackage{cite}
-\usepackage{microtype}
+%\usepackage{microtype}
 
 % hyperref last because otherwise some things go wrong.
 \usepackage{hyperref}
@@ -100,7 +100,7 @@ For overviews of interactive theorem proving, see, for example, \cite{avigad:har
 Proof assistants are used by computer scientists to verify that hardware and software meet their design specifications, a practice known as \emph{formal verification}. The mathematical analogue is verifying the correctness of a mathematical proof, a task which is most compelling when the correctness of the original theorem is in doubt. An early landmark was Thomas Hales's verification of his proof of the Kepler conjecture \cite{hales:05}, which states the the optimal density of a packing of equally-sized spheres in space is attained by the familiar cubic and hexagonal close packing arrangements. Hales launched the project in response to difficulties that arose in the ordinary mathematical review process, some of them stemming from the extensive use of computation in his proof \cite{hales:et:al:17}.
 
 A more recent landmark was the \emph{Liquid Tensor Experiment}, which arose from a challenge posed by Peter Scholze (described in \cite{castelvecchi:21}).
-On June 5, 2021, Scholze acknowledged the achievement:\footnote{{https://xenaproject.wordpress.com/2021/06/05/half-a-year-of-the-liquid-tensor-experiment-amazing-developments/}}
+On June 5, 2021, Scholze acknowledged the achievement:\footnote{\burl{https://xenaproject.wordpress.com/2021/06/05/half-a-year-of-the-liquid-tensor-experiment-amazing-developments/}}
 \begin{quote}
 Exactly half a year ago I wrote the Liquid Tensor Experiment blog post, challenging the formalization of a difficult foundational theorem from my Analytic Geometry lecture notes on joint work with Dustin Clausen. While this challenge has not been completed yet, I am excited to announce that the Experiment has verified the entire part of the argument that I was unsure about. I find it absolutely insane that interactive proof assistants are now at the level that within a very reasonable time span they can formally verify difficult original research.
 \end{quote}
