--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -100,7 +100,7 @@ we will usually write $\Arrows(A,B)$ because the $\CC$ subscript is tedious and
 it's clear what category $A$ and $B$ come from. People
 also write $\Hom(A, B)$ or $\Hom_{\CC}(A,B)$, or $\ihom(A, B)$ or just $\CC(A,B)$ to mean
 $\Arrows(A,B)$. Here ``$\Hom$'' stands for homomorphism, which is a standard word for
-mappings that preserve some kind of structure. Category theory, and the Yoneda lemma, it
+mappings that preserve some kind of structure. Category theory, and the Yoneda lemma,
 it turns out, is mostly about the arrows.
 
 \goodbreak
