--- a/2004.09194/LOSRvsLOCC_published_vTOC.tex
+++ b/2004.09194/LOSRvsLOCC_published_vTOC.tex
@@ -1,18 +1,3 @@
-\PassOptionsToPackage{pdftex,
-pdfencoding=auto,
-pdfnewwindow=true,
-pdfusetitle=true,
-bookmarks=true,
-bookmarksnumbered=true,
-bookmarksopen=true,
-pdfpagemode=UseThumbs,
-bookmarksopenlevel=1,
-pdfpagelabels=false,
-breaklinks=true,
-colorlinks=true
-}{hyperref}
-\PassOptionsToPackage{usenames,dvipsnames,pdftex}{xcolor}
-\PassOptionsToPackage{letterpaper,margin=0cm,bottom=0.1cm}{geometry}
 %\documentclass[aps,pra,twocolumn,unsortedaddress,superscriptaddress,nofootinbib,10pt,longbibliography,amsfonts,amssymb,amsmath,floatfix,tightenlines,notitlepage]{revtex4-2}
 \documentclass[12pt]{article}
 \pdfoutput=1
@@ -30,7 +15,6 @@ colorlinks=true
 \usepackage[T1]{fontenc} % https://tex.stackexchange.com/questions/1291/why-are-bitmap-fonts-used-automatically
 %\usepackage{lmodern}
 \usepackage[utf8]{inputenx}
-
 
 \usepackage[subfigure,titles]{tocloft}
 \setlength{\cftbeforesecskip}{3pt}
@@ -73,7 +57,7 @@ spacing={true}
 \definecolor{gray}{RGB}{150, 150, 150}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage[noBBpl,sc]{mathpazo}
 \usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.1}
 \sloppy
@@ -86,26 +70,6 @@ spacing={true}
 
 \usepackage[small]{titlesec}
 \titlelabel{\thetitle.\quad}
-
-% hyperref last because otherwise some things go wrong.
-\usepackage{hyperref}
-\hypersetup{colorlinks=true
-,breaklinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
-
-% make sure there is enough TOC for reasonable pdf bookmarks.
-\setcounter{tocdepth}{3}
 
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
@@ -183,7 +147,27 @@ bookmarksopenlevel=10
 \tolerance=9999
 \emergencystretch=10pt
 
-\geometry{letterpaper, margin=2cm, top=1.5cm, bottom=1in, nohead, nomarginpar}
+\setcounter{tocdepth}{3}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 
 \begin{document}
 \title{Understanding the interplay of entanglement and nonlocality: %\newline
@@ -208,6 +192,8 @@ motivating and developing a new branch of entanglement theory}
 
 \date{30 Nov 2023}
 \maketitle
+\newpage
+
 \begin{abstract}
 A standard approach to quantifying resources is to determine which operations on the resources are freely available, and to deduce the partial order over resources that is induced by the relation of convertibility under the free operations. If the resource of interest is the nonclassicality of the correlations embodied in a quantum state, i.e., {\em entanglement}, then the common assumption is that the appropriate choice of free operations is Local Operations and Classical Communication (LOCC). We here advocate for the study of a different choice of free operations, namely, Local Operations and Shared Randomness (LOSR), and demonstrate its utility in understanding the interplay between the entanglement of states and the nonlocality of the correlations in Bell experiments. Specifically, we show that the LOSR paradigm  (i) provides a resolution of the {\em anomalies of nonlocality}, wherein partially entangled states exhibit more nonlocality than maximally  entangled states, (ii) entails new notions of genuine multipartite entanglement and nonlocality that are free of the pathological features of the conventional notions, and (iii) makes possible a resource-theoretic account of the self-testing of entangled states which generalizes and simplifies prior results. Along the way, we derive some fundamental results concerning the necessary and sufficient conditions for convertibility between pure entangled states under LOSR and highlight some of their consequences, such as the impossibility of catalysis for bipartite pure states. The resource-theoretic perspective also clarifies why it is neither surprising nor problematic that there are mixed entangled states which do not violate any Bell inequality. Our results motivate the study of LOSR-entanglement as a new branch of entanglement theory.
 \end{abstract}
@@ -1415,8 +1401,6 @@ D.S.~is supported by a Vanier Canada Graduate Scholarship. T.C.F.~is supported b
 \begin{appendices}
 %\addcontentsline{toc}{section}{Appendices}% Insert reference to Appendices in ToC
 %\renewcommand{\addcontentsline}[3]{}
-\addtocontents{toc}{\protect\setcounter{tocdepth}{-1}}
-
 
 
 \section{Extracting a monotone from each instance of the anomaly} \label{monotones}
