--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,26 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-09-08 20:36:32 -0400 
+%% Created for Pete Su at 2023-12-04 09:45:09 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Tumulka2022,
+	author = {Tumulka, Roderich},
+	date-added = {2023-12-04 09:44:57 -0500},
+	date-modified = {2023-12-04 09:45:09 -0500},
+	doi = {10.1007/978-3-031-09548-1},
+	isbn = {9783031095481},
+	issn = {1616-6361},
+	journal = {Lecture Notes in Physics},
+	publisher = {Springer International Publishing},
+	title = {Foundations of Quantum Mechanics},
+	url = {http://dx.doi.org/10.1007/978-3-031-09548-1},
+	year = {2022},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-3-031-09548-1}}
 
 @article{Taylor1979,
 	author = {Taylor, Joseph H and Fowler, Lee A and McCulloch, Peter M},
