--- a/1811.03116/pqg_v4.3-arxiv-v3.tex
+++ b/1811.03116/pqg_v4.3-arxiv-v3.tex
@@ -1,7 +1,7 @@
 % cut-off -> another
 % positivity -> CPTP on valid initial states
 % moller -> energy reference (article in proceedings)
-\documentclass[aps,pra,showpacs,citeautoscript,amsmath,amssymb,floatfix,superscriptaddress,bbm, verbatim,amsfonts,changes,10pt,nofootinbib,longbibliography]{revtex4-1}
+\documentclass[aps,pra,showpacs,citeautoscript,amsmath,amssymb,floatfix,superscriptaddress,bbm, verbatim,amsfonts,changes,12pt,nofootinbib,longbibliography]{revtex4-2}
 \pdfoutput=1
 \usepackage{amsmath,bbold,bm}
 \usepackage{amssymb}
@@ -18,6 +18,50 @@
 \usepackage{multirow}
 \usepackage{hyperref}
 \usepackage{xifthen}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \def\toto{\mathop{\to}\limits^{TO}}
 \def\pij{p_{i\to j}}
 \def\dmin{D_{\min}}
@@ -503,6 +547,8 @@
 general form of classical-quantum dynamics and consider realisations which have as its limit deterministic classical Hamiltonian evolution. The formalism is then applied to quantum field theory interacting with the classical space-time metric. One can view the classical-quantum theory as fundamental or as an effective theory useful for computing the back-reaction of quantum fields on geometry. We discuss a number of open questions from the perspective of both viewpoints. 
 \end{abstract}
 \maketitle
+
+\newpage
 
 \section{Must we quantise gravity?}
 
