--- a/1811.03116/pqg_v4.3-arxiv-v3.tex
+++ b/1811.03116/pqg_v4.3-arxiv-v3.tex
@@ -1,7 +1,7 @@
 % cut-off -> another
 % positivity -> CPTP on valid initial states
 % moller -> energy reference (article in proceedings)
-\documentclass[aps,pra,showpacs,citeautoscript,amsmath,amssymb,floatfix,superscriptaddress,bbm, verbatim,amsfonts,changes,12pt,nofootinbib,longbibliography]{revtex4-2}
+\documentclass[aps,pra,showpacs,citeautoscript,amsmath,amssymb,floatfix,superscriptaddress,bbm, verbatim,amsfonts,changes,11pt,nofootinbib,longbibliography]{revtex4-2}
 \pdfoutput=1
 \usepackage{amsmath,bbold,bm}
 \usepackage{amssymb}
@@ -22,7 +22,7 @@
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
 \usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
-\linespread{1.1}
+\linespread{1.05}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
@@ -695,7 +695,8 @@ This can be generalised to the continuous master equation since derived in  \cit
 \frac{1}{2}\Big(\{\Hq(q),\psiz\PB-\{\psiz,\Hq(q)\PB\Big)
  \nonumber\\ 
 &+\frac{1}{2}\int dxdx' \{q_i(x'),\{q_j(x),D_2^{ij}(x,x')\psiz\}\}
-+\frac{1}{2}\int dxdx'D_{0,ij}(x,x')
+ \nonumber\\ 
+&+\frac{1}{2}\int dxdx'D_{0,ij}(x,x')
 \left[\{\Hq(q),p^i(x)\},\left[\psiz,\{\Hq(q),p^j(x')\}\right]\right]
 \label{eq:CQcontinuousHam}
 \end{align}
@@ -763,9 +764,10 @@ each point $\z$ is a classical field (the 3-metric, and 3-momentum) over $\mathb
 
 
 \begin{table}
+\scriptsize
 	\begin{center}
 		\begingroup
-		\setlength{\tabcolsep}{10pt} %
+		\setlength{\tabcolsep}{5pt} %
 		\renewcommand{\arraystretch}{1.4}
 		\begin{tabular}{|l| l|l|l|} 
 	\hline
@@ -854,6 +856,7 @@ is sometimes referred to as the {\it differential Chapman-Kolmogorov equation \c
 
 
 \begin{table}
+\scriptsize
 	\begin{center}
 		\begingroup
 		\setlength{\tabcolsep}{10pt} %
